--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mr-mrs-smith",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://earthquake.usgs.gov",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
