--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
     "@types/react-redux": "^7.1.23",
+    "bootstrap": "^5.1.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
@@ -20,6 +21,7 @@
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
     "typescript": "~4.1.5"
   },
   "scripts": {
